# hyper-lrp

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
src/hyper_lrp/: __init__.py  cli.py  heatmap.py  registry.py  service.py  types.py
src/hyper_lrp/adapters/: __init__.py  base.py  hf_clip.py
src/hyper_lrp/backends/: __init__.py  lxt.py
tests/: test_clip_attnlrp.py
